- Added new option to allow right click block to open shulker (placement requires shift right click block) - Removed dependency on ChestSort plugin and implementation class since the repo was offline.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -34,6 +34,7 @@ shulkers:
   requires_permission: true # Boolean - Set this to false if you want to allow anyone to use the plugin
   enable_read_only: false # Boolean - Set this to true if you just want players to be able to preview a shulkerbox's contents
   enable_right_click_open: true # Boolean - Set this to false if you do not want to allow players to open a shulker by rightclicking
+  enable_right_click_block_open: false # Boolean - Set this to true if you want to allow players to open a shulker by rightclicking on a block (shift+rightclick to place)
   enable_inventory_click_open: false # Boolean - Set this to false if you do not want to allow players to open a shulker by shift clicking in their inventories
   disable_movement_check: false # Boolean - Set this to true if you want players to be able to open shulkerboxes using the plugin while moving
   enable_chest_sort_hook: true # Boolean - Set this to true if you want to hook with ChestSort (Inventory sorting plugin)
